Add overflow hidden

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         		width: 100vw;
         		background-color: yellow;
         		margin: 0;
+                overflow: hidden;
         	}
         	canvas {
         		height: 100vh;
