--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Natt</title>
+        <title>Bara</title>
         <style type="text/css">
         	html, body {
         		height: 100vh;
